--- a/arch/arm64/boot/dts/marvell/armada-8082-db.dts
+++ b/arch/arm64/boot/dts/marvell/armada-8082-db.dts
@@ -27,6 +27,14 @@
 	status = "okay";
 };
 
+&ap0_xor0 {
+	status = "disabled";
+};
+
+&ap0_xor1 {
+	status = "disabled";
+};
+
 &cp0_sata0 {
 	status = "okay";
 	sata-port@1 {
