--- a/arch/arm64/boot/dts/marvell/armada-ap810-octa-core.dtsi
+++ b/arch/arm64/boot/dts/marvell/armada-ap810-octa-core.dtsi
@@ -44,7 +44,10 @@
  * Device Tree file for Marvell Armada AP810 OCTA cores.
  */
 
-#include "armada-ap810-ap0.dtsi"
+#define CPU_NUM(x)     EVALUATOR(AP_NUM, x)
+#define CPU_NUM_REG(x) EVALUATOR(0x, CPU_NUM(x))
+
+#include "armada-ap810.dtsi"
 
 / {
 	cpus {
@@ -52,53 +55,61 @@
 		#size-cells = <0>;
 		compatible = "marvell,armada-ap810-octa";
 
-		cpu@0 {
+		cpu@CPU_NUM(0000) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x000>;
+			reg = <CPU_NUM_REG(0000)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
-		cpu@1 {
+		cpu@CPU_NUM(0001) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x001>;
+			reg = <CPU_NUM_REG(0001)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
-		cpu@100 {
+		cpu@CPU_NUM(0100) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x100>;
+			reg = <CPU_NUM_REG(0100)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
-		cpu@101 {
+		cpu@CPU_NUM(0101) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x101>;
+			reg = <CPU_NUM_REG(0101)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
-		cpu@200 {
+		cpu@CPU_NUM(0200) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x200>;
+			reg = <CPU_NUM_REG(0200)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
-		cpu@201 {
+		cpu@CPU_NUM(0201) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x201>;
+			reg = <CPU_NUM_REG(0201)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
-		cpu@300 {
+		cpu@CPU_NUM(0300) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x300>;
+			reg = <CPU_NUM_REG(0300)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
-		cpu@301 {
+		cpu@CPU_NUM(0301) {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
-			reg = <0x301>;
+			reg = <CPU_NUM_REG(0301)>;
 			enable-method = "psci";
+			numa-node-id = <AP_NUM>;
 		};
 	};
 };
