arm64: dts: marvell: allow the use of SATA sub-nodes
Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/arch/arm64/boot/dts/marvell/armada-cp110.dtsi
+++ b/arch/arm64/boot/dts/marvell/armada-cp110.dtsi
@@ -236,6 +236,8 @@
 			interrupts = <ICU_GRP_NSR 107 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&CP110_LABEL(clk) 1 15>;
 			status = "disabled";
+			#address-cells = <1>;
+			#size-cells = <0>;
 		};
 
 		CP110_LABEL(xor0): xor@6a0000 {
