arm64: dts: marvell: add syscon compatible to CP110 ICU node
Prepare the migration to new bindings where the ICU node has several
subnodes: one per interrupt group (NSR, SEI, REI, etc). The code for
each node will share the same set of registers. Turning the ICU node
into a syscon is a clean solution to handle that.

Signed-off-by: Miquel Raynal <miquel.raynal@bootlin.com>

--- a/arch/arm64/boot/dts/marvell/armada-cp110.dtsi
+++ b/arch/arm64/boot/dts/marvell/armada-cp110.dtsi
@@ -148,7 +148,7 @@
 		};
 
 		CP110_LABEL(icu): interrupt-controller@1e0000 {
-			compatible = "marvell,cp110-icu";
+			compatible = "marvell,cp110-icu", "syscon";
 			reg = <0x1e0000 0x440>;
 			#interrupt-cells = <3>;
 			interrupt-controller;
