arm64: dts: marvell: make the ICU msi-parent configurable
The msi-parent of the ICU will be different depending on whether the
CP110 is integrated into an AP806 based system or an AP810 based
system.

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/arch/arm64/boot/dts/marvell/armada-ap806.dtsi
+++ b/arch/arm64/boot/dts/marvell/armada-ap806.dtsi
@@ -49,6 +49,7 @@
 /* GIC-v2m in this AP is the XOR MSI parent for CPs south-bridges connected to this AP */
 #define XOR_MSI_PARENT(XOR_NUM) <&gic_v2m0>
 #define PCIE_MSI_PARENT(PCIE) <&gic_v2m0>
+#define ICU_MSI_PARENT <&gicp>
 
 /dts-v1/;
 
